Rewrite HTML5,fix #5

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
 <html>
+<head>
+	<title>Hello</title>
+</head>
 <body>
-<h2>Hello!</h2>
+<h2>Title</h2>
+<p>Hellow</p>
 </body>
 </html>
