--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 </div>
 
 <script>
+(function(){
  var canvas = document.getElementById('game');
  var ctx = canvas.getContext('2d');
  
@@ -75,7 +76,7 @@ ctx.fillStyle = 'black';
 ctx.beginPath();
 ctx.arc(100, 150, 50, 0, Math.PI * 2 , true);
 ctx.fill();
-
+}) ();
  </script>
 
 
