--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello</title>
+	<title></title>
+
 </head>
 <body>
+
 <link rel="stylesheet" type="text/css" href="bootstrap.css">
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
@@ -54,14 +56,24 @@
   </div><!-- /.navbar-collapse -->
 </nav>
 
-<div id="main"></div>
-<div id="score"></div>
+</div>
+
+<style>
+#main{
+	width: 640px;
+	height: 480px;
+
+	background: url(./bg.jpg);
+}	
+</style>
+
 <div class="row">
 	<div class="col-md-12">
 		<div id="main"><canvas id="game"></canvas></div>
 	</div>
 		
-</div>
+
+
 
 <script type="text/javascript" src="main.js"></script>
 
